--- a/public/privacy_policy.html
+++ b/public/privacy_policy.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="//www.translationllc.com/assets/translation-FB-share.jpg"/>
 
-    <title>Translation</title>
+<title>Translation</title>
 
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -60,7 +60,7 @@
  
 <p>We engage third parties, such as Google’s Analytics to provide analytics about the use of our Website. These entities may use cookies, web beacons, pixels, embedded scripts, and other technologies to automatically collect information about your use of the Website, such as your IP address, web browser, pages viewed, time spent on pages, links clicked and conversion information.</p>
 
-<p>We receive information about consumers from third parties to enable targeted advertising on the website(s) and application(s) that we support. The collection and use of that data is governed by the privacy policy and legal terms of the data collector and the website using the data; it is not governed by Translation Enterprise, LLC.</p>
+<p>We receive information about consumers from third parties to enable targeted advertising on the website(s) and application(s) that we support. The collection and use of that data is governed by the privacy policy and legal terms of the data collector and the website using the data; it is not governed by Translation Enterprises, LLC.</p>
  
 <h3>Email Information</h3>
 
